# CloudCompare

./: CMakeLists.txt  README.md
CCPAPI/: CMakeLists.txt
CCPAPI/PAPI/: CMakeLists.txt
ccViewer/bin_other/: start.bat
cmake/: CMakeInclude.cmake  DeployQt.cmake  Install.cmake
libs/qCC_io/cmake/: GDALSupport.cmake
plugins/: CMakeLists.txt
qCC/: mainwindow.cpp  mainwindow.h
qCC/bin_other/: start.bat
qCC/ui_templates/: mainWindow.ui
